force-app/main/default/objects/Approval_History__c/Approval_History__c.object-meta.xml
<CustomObject>
    <label>Approval History</label>
    <nameField>
        <displayFormat>AH-{00000}</displayFormat>
        <label>Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>