force-app/main/default/objects/Approval_History__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Histories</relationshipLabel>
    <relationshipName>Approved_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>