force-app/main/default/objects/Approval_History__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Current Approvals</relationshipLabel>
    <relationshipName>Current_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>